--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -26,7 +27,9 @@
         <!--Header-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">O.J.F.E</a>
+              <a class="navbar-brand" href="#">
+                <img href="{% static 'app/image/logo.jpg' %}" height ="30" width ="30" />
+              </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -34,9 +37,6 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -50,6 +50,9 @@
                     </ul>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link disabled">Disabled</a>
                   </li>
                 </ul>
@@ -58,6 +61,28 @@
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
               </div>
+              
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <!--Thanh profile-->
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Username
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Profile</a></li>
+                    <li><a class="dropdown-item" href="#">Settings</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Log Out</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Register</a>
+                </li>
+                
+              </ul>
             </div>
           </nav>
 
@@ -65,7 +90,7 @@
           {% block main-content%}{% endblock main-content%}
 
           <!--Footer-->
-          <footer>
+          <footer class ="container--fluid bg-success text-center fixed-bottom p-2 mt-5">
             Copyright 2023
           </footer>
 
