--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img href="{% static 'app/image/logo.jpg' %}" height ="30" width ="30" />
+                <img src="{% static 'app/image/logo.jpg' %}" height ="100" width ="100" />
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
