--- a/app/templates/app/register_company.html
+++ b/app/templates/app/register_company.html
@@ -21,31 +21,18 @@
                       <div class="row justify-content-center">
                         <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
           
-                          <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Job Finder Sign up</p>
+                          <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Company Sign up</p>
           
                           <form class="mx-1 mx-md-4">
           
                             <div class="d-flex flex-row align-items-center mb-4">
                               <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
-                                <label class="form-label" for="form3Example1c">Full Name</label>
+                                <label class="form-label" for="form3Example1c">Company Name</label>
                                 <input type="text" id="form3Example1c" class="form-control" />
                               </div>
                             </div>
-
-                            <div class="d-flex flex-row align-items-center mb-4">
-                                <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                                <div class="form-outline flex-fill mb-0">
-                                    <label for="inputGender" class="form-label">Gender</label>
-                                    <select id="inputGender" class="form-select">
-                                    <option selected>Choose your Gender</option>
-                                    <option>Male</option>
-                                    <option>Female</option>
-                                    </select>
-                                </div>
-                            </div>
-                          
-          
+                                 
                             <div class="d-flex flex-row align-items-center mb-4">
                               <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
@@ -90,7 +77,7 @@
                                 <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                 <div class="form-outline flex-fill mb-0">
                                 <label for="floatingTextarea2">Introduction</label>
-                                <textarea class="form-control" placeholder="Briefly introduce yourself" id="floatingTextarea2" style="height: 100px"></textarea>                               
+                                <textarea class="form-control" placeholder="Briefly introduce your company" id="floatingTextarea2" style="height: 100px"></textarea>                               
                                 </div>
                             </div>
 
