--- a/app/templates/app/register_finder.html
+++ b/app/templates/app/register_finder.html
@@ -69,6 +69,14 @@
                                 <input type="password" id="form3Example4cd" class="form-control" />
                               </div>
                             </div>
+                            
+                            <div class="d-flex flex-row align-items-center mb-4">
+                              <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                              <div class="form-outline flex-fill mb-0">
+                              <label for="inputAddress" class="form-label">Date of birth</label>
+                              <input class="form-control" type="date"  id="inputDate" placeholder="01/01/1999">
+                              </div>
+                            </div>
 
                             <div class="d-flex flex-row align-items-center mb-4">
                                 <i class="fas fa-key fa-lg me-3 fa-fw"></i>
