--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -40,13 +40,13 @@
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                      Ngành nghề
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Ngành Công nghệ thông tin</a></li>
+                      <li><a class="dropdown-item" href="#">Ngành Tài chính - Ngân hàng</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">Ngành Kế toán</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
