--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -40,7 +40,7 @@
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Ngành nghề
+                      Ngành nghề hot
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#">Ngành Công nghệ thông tin</a></li>
