--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -22,14 +22,23 @@
                         <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
           
                           <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Log in</p>
-          
-                          <form class="mx-1 mx-md-4">
+                          
+                          <div class="text-center fw-bold">
+                            {% if messages %}
+                              {% for message in messages %}
+                                <div>{{ message }}</div>
+                              {% endfor %}
+                            {% endif %}
+                          </div>
+
+                          <form class="mx-1 mx-md-4" action="" method="POST">
+                            {% csrf_token %}
                                  
                             <div class="d-flex flex-row align-items-center mb-4">
                               <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label class="form-label" for="form3Example3c">Username</label>
-                                <input type="Username" id="form3Example3c" class="form-control" />                               
+                                <input type="Username" id="form3Example3c" class="form-control" name="uname"/>                               
                               </div>
                             </div>
           
@@ -37,12 +46,12 @@
                               <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label class="form-label" for="form3Example4c">Password</label>
-                                <input type="password" id="form3Example4c" class="form-control" />                              
+                                <input type="password" id="form3Example4c" class="form-control" name="pass"/>                              
                               </div>
                             </div>
           
                             <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                              <button type="button" class="btn btn-primary btn-lg">Log In</button>
+                              <button type="submit" class="btn btn-primary btn-lg">Log In</button>
                             </div>
           
                           </form>
