--- a/app/templates/app/register_company.html
+++ b/app/templates/app/register_company.html
@@ -22,14 +22,23 @@
                         <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
           
                           <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Company Sign up</p>
-          
-                          <form class="mx-1 mx-md-4">
-          
+                          
+                          <div class="text-center fw-bold">
+                            {% if messages %}
+                              {% for message in messages %}
+                                <div>{{ message }}</div>
+                              {% endfor %}
+                            {% endif %}
+                          </div>
+
+                          <form class="mx-1 mx-md-4" method="POST" action="">
+                            {% csrf_token %}
+                            
                             <div class="d-flex flex-row align-items-center mb-4">
                               <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label class="form-label" for="form3Example1c">Company Name</label>
-                                <input type="text" id="form3Example1c" class="form-control" />
+                                <input type="text" id="form3Example1c" class="form-control" name="cname" />
                               </div>
                             </div>
                                  
@@ -37,7 +46,7 @@
                               <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label class="form-label" for="form3Example3c">Username</label>
-                                <input type="Username" id="form3Example3c" class="form-control" />                               
+                                <input type="Username" id="form3Example3c" class="form-control" name="uname" />                               
                               </div>
                             </div>
           
@@ -45,7 +54,7 @@
                               <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label class="form-label" for="form3Example4c">Password</label>
-                                <input type="password" id="form3Example4c" class="form-control" />                              
+                                <input type="password" id="form3Example4c" class="form-control" name="pass"/>                              
                               </div>
                             </div>
           
@@ -53,7 +62,7 @@
                               <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label class="form-label" for="form3Example4cd">Repeat your password</label>
-                                <input type="password" id="form3Example4cd" class="form-control" />
+                                <input type="password" id="form3Example4cd" class="form-control" name="rpass"/>
                               </div>
                             </div>
 
@@ -61,7 +70,7 @@
                                 <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label for="inputAddress" class="form-label">Address</label>
-                                <input class="form-control" type="text"  id="inputAddress" placeholder="1234 Main St">
+                                <input class="form-control" type="text"  id="inputAddress" placeholder="1234 Main St" name="addr">
                               </div>
                             </div>
 
@@ -69,7 +78,7 @@
                                 <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label for="inputCity" class="form-label">City</label>
-                                <input class="form-control" type="text"  id="inputCity" placeholder="ABC City">
+                                <input class="form-control" type="text"  id="inputCity" placeholder="ABC City" name="city">
                               </div>
                             </div>
 
@@ -77,19 +86,19 @@
                                 <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                 <div class="form-outline flex-fill mb-0">
                                 <label for="floatingTextarea2">Introduction</label>
-                                <textarea class="form-control" placeholder="Briefly introduce your company" id="floatingTextarea2" style="height: 100px"></textarea>                               
+                                <textarea class="form-control" placeholder="Briefly introduce your company" id="floatingTextarea2" style="height: 100px" name="intro"></textarea>                               
                                 </div>
                             </div>
 
-                            <div class="form-check d-flex justify-content-center mb-5">
+                            {% comment %} <div class="form-check d-flex justify-content-center mb-5">
                               <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
                               <label class="form-check-label" for="form2Example3">
                                 I agree all statements in <a href="#!">Terms of service</a>
                               </label>
-                            </div>
+                            </div> {% endcomment %}
           
                             <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                              <button type="button" class="btn btn-primary btn-lg">Register</button>
+                              <button type="submit" class="btn btn-primary btn-lg">Register</button>
                             </div>
           
                           </form>
