--- a/app/templates/app/register_finder.html
+++ b/app/templates/app/register_finder.html
@@ -22,14 +22,23 @@
                         <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
           
                           <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Job Finder Sign up</p>
-          
-                          <form class="mx-1 mx-md-4">
+                          
+                          <div class="text-center fw-bold">
+                            {% if messages %}
+                              {% for message in messages %}
+                                <div>{{ message }}</div>
+                              {% endfor %}
+                            {% endif %}
+                          </div>
+
+                          <form class="mx-1 mx-md-4" action="" method="POST">
+                            {% csrf_token %}
           
                             <div class="d-flex flex-row align-items-center mb-4">
                               <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label class="form-label" for="form3Example1c">Full Name</label>
-                                <input type="text" id="form3Example1c" class="form-control" />
+                                <input type="text" id="form3Example1c" class="form-control" name="fname" />
                               </div>
                             </div>
 
@@ -37,7 +46,7 @@
                                 <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                                 <div class="form-outline flex-fill mb-0">
                                     <label for="inputGender" class="form-label">Gender</label>
-                                    <select id="inputGender" class="form-select">
+                                    <select id="inputGender" class="form-select" name="gender">
                                     <option selected>Choose your Gender</option>
                                     <option>Male</option>
                                     <option>Female</option>
@@ -50,7 +59,7 @@
                               <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label class="form-label" for="form3Example3c">Username</label>
-                                <input type="Username" id="form3Example3c" class="form-control" />                               
+                                <input type="Username" id="form3Example3c" class="form-control" name="uname"/>                               
                               </div>
                             </div>
           
@@ -58,7 +67,7 @@
                               <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label class="form-label" for="form3Example4c">Password</label>
-                                <input type="password" id="form3Example4c" class="form-control" />                              
+                                <input type="password" id="form3Example4c" class="form-control" name="pass"/>                              
                               </div>
                             </div>
           
@@ -66,7 +75,7 @@
                               <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label class="form-label" for="form3Example4cd">Repeat your password</label>
-                                <input type="password" id="form3Example4cd" class="form-control" />
+                                <input type="password" id="form3Example4cd" class="form-control" name="rpass"/>
                               </div>
                             </div>
                             
@@ -74,7 +83,7 @@
                               <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                               <label for="inputDate" class="form-label">Date of birth</label>
-                              <input class="form-control" type="date"  id="inputDate" placeholder="01/01/1999">
+                              <input class="form-control" type="date"  id="inputDate" placeholder="01/01/1999" name="date">
                               </div>
                             </div>
 
@@ -82,7 +91,7 @@
                                 <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label for="inputAddress" class="form-label">Address</label>
-                                <input class="form-control" type="text"  id="inputAddress" placeholder="1234 Main St">
+                                <input class="form-control" type="text"  id="inputAddress" placeholder="1234 Main St" name="addr">
                               </div>
                             </div>
 
@@ -90,7 +99,7 @@
                                 <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                                 <label for="inputCity" class="form-label">City</label>
-                                <input class="form-control" type="text"  id="inputCity" placeholder="ABC City">
+                                <input class="form-control" type="text"  id="inputCity" placeholder="ABC City" name="city">
                               </div>
                             </div>
 
@@ -98,19 +107,19 @@
                                 <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                 <div class="form-outline flex-fill mb-0">
                                 <label for="floatingTextarea2">Introduction</label>
-                                <textarea class="form-control" placeholder="Briefly introduce yourself" id="floatingTextarea2" style="height: 100px"></textarea>                               
+                                <textarea class="form-control" placeholder="Briefly introduce yourself" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
                                 </div>
                             </div>
 
-                            <div class="form-check d-flex justify-content-center mb-5">
+                            {% comment %} <div class="form-check d-flex justify-content-center mb-5">
                               <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
                               <label class="form-check-label" for="form2Example3">
                                 I agree all statements in <a href="#!">Terms of service</a>
                               </label>
-                            </div>
+                            </div> {% endcomment %}
           
                             <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                              <button type="button" class="btn btn-primary btn-lg">Register</button>
+                              <button type="submit" class="btn btn-primary btn-lg">Register</button>
                             </div>
           
                           </form>
