Edit navigation bar

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -40,12 +40,22 @@
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Ngành nghề hot
+                      Popular Job
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Ngành Công nghệ thông tin</a></li>
-                      <li><a class="dropdown-item" href="#">Ngành Tài chính - Ngân hàng</a></li>
-                      <li><a class="dropdown-item" href="#">Ngành Kế toán</a></li>
+                      <li><a class="dropdown-item" href="#">Information Technology</a></li>
+                      <li><a class="dropdown-item" href="#">Finance and Banking</a></li>
+                      <li><a class="dropdown-item" href="#">Business Management</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Salary
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Below 1000$</a></li>
+                      <li><a class="dropdown-item" href="#">From 1000$ to 10000$</a></li>
+                      <li><a class="dropdown-item" href="#">Above 10000$</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
