Edit navigation bar

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -48,21 +48,30 @@
                       <li><a class="dropdown-item" href="#">Business Management</a></li>
                     </ul>
                   </li>
+
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Salary
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Below 1000$</a></li>
-                      <li><a class="dropdown-item" href="#">From 1000$ to 10000$</a></li>
-                      <li><a class="dropdown-item" href="#">Above 10000$</a></li>
+                      <li><a class="dropdown-item" href="#">Below 500$</a></li>
+                      <li><a class="dropdown-item" href="#">From 500$ to 1000$</a></li>
+                      <li><a class="dropdown-item" href="#">Above 1000$</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Popular Cities
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Ho Chi Minh City</a></li>
+                      <li><a class="dropdown-item" href="#">Ha Noi</a></li>
+                      <li><a class="dropdown-item" href="#">Da Nang</a></li>
+                      <li><a class="dropdown-item" href="#">Hue</a></li>
+                      <li><a class="dropdown-item" href="#">Nha Trang</a></li>
+                      <li><a class="dropdown-item" href="#">Hai Phong</a></li>
+                    </ul>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
