--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -10,7 +10,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--css-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <!--js-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -74,6 +74,7 @@
                     </ul>
                   </li>
                 </ul>
+
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
@@ -83,25 +84,50 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <!--Thanh profile-->
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Username
-                  </a>
+                  </i>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <i class="bi bi-person-circle" > </i>
+                        Profile
+                      </a>  
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href = "#">
+                        <i class="bi bi-gear" > </i>
+                        Settings
+                      <a/>
+                    </li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Log Out</a></li>
+                    <li>
+                      <a class="dropdown-item" href="#">
+                        <i class="bi bi-box-arrow-right"> </i>
+                        Log Out
+                      </a>
+                    </li>
+
                   </ul>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'login' %}">Login</a>
+                  <a class="nav-link" href="{% url 'login' %}" >
+                    <i class="bi bi-box-arrow-in-left" ></i>
+                    Login
+                  </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'register_finder' %}">Register as job finders</a>
+                  <a class="nav-link" href="{% url 'register_finder' %}" >
+                    <i class="bi bi-briefcase-fill" > </i>
+                    Register as job finders
+                  </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'register_company' %}">Register as companies</a>
+                  <a class="nav-link" href="{% url 'register_company' %}">
+                    <i class="bi bi-building " ></i>
+                    Register as companies
+                  </a>
                 </li>
                 
               </ul>
