Edit Username font

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -84,9 +84,9 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <!--Thanh profile-->
                 <li class="nav-item dropdown">
-                  <i class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Username
-                  </i>
+                  </a>
                   <ul class="dropdown-menu">
                     <li>
                       <a class="dropdown-item" href="#">
