--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -97,11 +97,9 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li>
-                      <a class="dropdown-item" href="#">
+                      <a class="dropdown-item" href="{% url 'profile' %}">
                         <i class="bi bi-person-circle" > </i>
-                        <a class="nav-link" href="{% url 'profile' %}">
-                          <i class="bi bi-heart" > </i>
-                          Profile
+                        Profile
                       </a>  
                     </li>
                     <li>
