--- a/app/templates/app/register_finder.html
+++ b/app/templates/app/register_finder.html
@@ -83,7 +83,7 @@
                               <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
                               <label for="inputDate" class="form-label">Date of birth</label>
-                              <input class="form-control" type="date"  id="inputDate" placeholder="01/01/1999" name="date">
+                              <input class="form-control" type="date"  id="inputDate" placeholder="01/01/1999" name="inputDate">
                               </div>
                             </div>
 
@@ -111,12 +111,12 @@
                                 </div>
                             </div>
 
-                            {% comment %} <div class="form-check d-flex justify-content-center mb-5">
-                              <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
+                            <div class="form-check d-flex justify-content-center mb-5">
+                              <input class="form-check-input me-2" type="checkbox" value="True" id="form2Example3c" name="checkbox"/>
                               <label class="form-check-label" for="form2Example3">
                                 I agree all statements in <a href="#!">Terms of service</a>
                               </label>
-                            </div> {% endcomment %}
+                            </div>
           
                             <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                               <button type="submit" class="btn btn-primary btn-lg">Register</button>
