--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -90,6 +90,7 @@
                   <ul class="dropdown-menu">
                     <li>
                       <a class="dropdown-item" href="#">
+                        <a class="nav-link" href="{% url 'profile' %}">
                         <i class="bi bi-person-circle" > </i>
                         <a class="nav-link" href="{% url 'profile' %}">
                           <i class="bi bi-heart" > </i>
