--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -1,5 +1,14 @@
 {% extends 'app/base.html' %}
 {% load static %}
 {% block main-content %}
-profile
+<div class="content-section">
+    <div class="media">
+      <div class="media-body">
+        <h2 class="account-heading">{{ app.username }}</h2>
+        <p class="text-secondary">{{ app.email }}</p>
+      </div>
+    </div>
+    <!-- FORM HERE -->
+  </div>
+
 {% endblock main-content %}
