3 profile cho admin emploer voi jf

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -97,7 +97,8 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li>
-                      <a class="dropdown-item" href="{% url 'profile' %}">
+                      <!--Tinh la 3 profile cua admin cua jf va cua e-->>
+                      <a class="dropdown-item" href="{% url 'profileA' %}">
                         <i class="bi bi-person-circle" > </i>
                         Profile
                       </a>  
