--- a/app/templates/app/profileA.html
+++ b/app/templates/app/profileA.html
@@ -1,14 +1,10 @@
 {% extends 'app/base.html' %}
 {% load static %}
 {% block main-content %}
-<div class="content-section">
-    <div class="media">
-      <div class="media-body">
-        <h2 class="account-heading">{{ app.username }}</h2>
-        <p class="text-secondary">{{ app.email }}</p>
-      </div>
-    </div>
-    <!-- FORM HERE -->
-  </div>
+hello Admin
+<br>
+profile
+{{user.username}}
 
+<p>Company: {{user.company_name}}</p>
 {% endblock main-content %}
