--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -97,7 +97,7 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li>
-                      <!--Tinh la 3 profile cua admin cua jf va cua e-->>
+                      <!--Tinh la 3 profile cua admin cua jf va cua e-->
                       <a class="dropdown-item" href="{% url 'profileA' %}">
                         <i class="bi bi-person-circle" > </i>
                         Profile
