--- a/app/templates/app/profileA.html
+++ b/app/templates/app/profileA.html
@@ -4,8 +4,8 @@
 <div class="content-section">
     <div class="media">
       <div class="media-body">
-        <h2 class="account-heading">{{ app.username }}</h2>
-        <p class="text-secondary">{{ app.email }}</p>
+        <h2 class="account-heading">{{user.username }}</h2>
+        <p class="text-secondary">{{ em.company_name }}</p>
       </div>
     </div>
     <!-- FORM HERE -->
