Edit views.py to get information for Profile

--- a/app/templates/app/profileA.html
+++ b/app/templates/app/profileA.html
@@ -6,7 +6,8 @@
 profile
 {{user.username}}
 
-<p>Company: {{user.company_name}}</p>-->
+
+<p>Company: {{em.company_name}}</p>-->
 <html>
     <head>
         <meta charset="utf-8">
