--- a/app/templates/app/profileE.html
+++ b/app/templates/app/profileE.html
@@ -1,6 +1,7 @@
 {% extends 'app/base.html' %}
 {% load static %}
 {% block main-content %}
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -21,7 +22,13 @@
                     <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
       
                       <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">WELCOME BACK BOSS</p>
-                      STATUS HERE
+                      Which talent shall belong to you
+
+                      <p>Employer: {{user.username}}</p>
+                      <p>Company: {{em.company_name}}</p>
+                      <p>Company address:{{em.address}}</p>
+                      <p>City:{{em.city}}</p>
+                      <p>Introduction: <br>{{em.introduction}}</p>
     </body>
 </html>
 {% endblock main-content %}
