--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,5 +1,11 @@
 {% extends 'app/base.html'%}
 {% load static %}
 {% block main-content %}
-Welcome to O.J.F.A
+ <div class = "container">
+    <div class = "row justify-content-center mt-0">
+        <div class = "col-md-10 col-sm-12 text-center">
+            <h1 class="display-10">Welcome to O.J.F.A</h1>
+        </div>
+    </div>
+</div>
 {% endblock main-content %}
