--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -104,7 +104,7 @@
                       </a>  
                     </li>
                     <li>
-                      <a class="dropdown-item" href = "#">
+                      <a class="dropdown-item" href = "{% url 'settings' %}">
                         <i class="bi bi-gear" > </i>
                         Settings
                       <a/>
