--- a/app/templates/app/settings.html
+++ b/app/templates/app/settings.html
@@ -44,6 +44,18 @@
                     </form>
               </div>
             </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    Account
+                  </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">
+                    <button type="button" class="btn btn-danger">Delete Account</button>
+                  </div>
+                </div>
+              </div>
         </div>
         
         <script src="" async defer></script>
