--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -112,7 +112,7 @@
                     </li>
                     <li><hr class="dropdown-divider"></li>
                     <li>
-                      <a class="dropdown-item" href="#">
+                      <a class="dropdown-item" href="/logout">
                         <i class="bi bi-box-arrow-right"> </i>
                         Log Out
                       </a>
