--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -26,7 +26,9 @@
                           <div class="text-center fw-bold">
                             {% if messages %}
                               {% for message in messages %}
-                                <div>{{ message }}</div>
+                                <div class="alert alert-danger" role="alert">
+                                  {{ message }}
+                                </div>
                               {% endfor %}
                             {% endif %}
                           </div>
