--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -105,6 +105,12 @@
                       </a>  
                     </li>
                     <li>
+                      <a class="dropdown-item" href="{% url 'publish' %}">
+                        <i class="bi bi-person-circle" > </i>
+                        Create post
+                      </a>  
+                    </li>
+                    <li>
                       <a class="dropdown-item" href = "{% url 'settings' %}">
                         <i class="bi bi-gear" > </i>
                         Settings
