Add pagination, Edit home UI, Edit Footer

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -176,11 +176,11 @@
           <div class="container">
             <footer class="py-5">
               <div class="row">
-                <div class="col-6 col-md-2 mb-3">
+                <div class="col-6 col-md">
                   <h5>Home</h5>
                 </div>
           
-                <div class="col-6 col-md-2 mb-3">
+                <div class="col-6 col-md">
                   <h5>Popular Job</h5>
                   <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Information Technology</a></li>
@@ -189,7 +189,7 @@
                   </ul>
                 </div>
           
-                <div class="col-6 col-md-2 mb-3">
+                <div class="col-6 col-md">
                   <h5>Salary</h5>
                   <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Below 500$</a></li>
@@ -198,11 +198,11 @@
                   </ul>
                 </div>
                 
-                <div class="col-6 col-md-2 mb-3">
+                <div class="col-6 col-md">
                   <h5>Cities</h5>
                   <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Ho Chi Minh City</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Ha Noig</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Ha Noi</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Da Nang</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Hue</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Nha Trang</a></li>
