--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -12,21 +12,27 @@
 </div>
 
 <div class="container">
-    <div class="row">
-        {% for _ in "123" %}
-        <div class="col-md-6 offset-md-3">
-            <div class="card mb-4 post-card">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        {% for _ in "123456" %}
+        <div class="col ">
+            <div class="card">
                 <a href="{% url 'post' %}">
                     <img src="{% static 'app/image/logo.jpg' %}" alt="Your Picture" class="card-img-top img-fluid">
                 </a>
                 <div class="card-body">
                     <a href="{% url 'post' %}">
-                        <h5 class="card-title">Caption for your Picture</h5> <!-- Wrap the text with <a> tag -->
+                        <h5 class="card-title">Caption for your Picture</h5> 
                     </a>
-                    <p class="card-text">Content inside</p>
+                    <p class="card-text lh-sm">Company Name : </p>
+                    <p class="card-text lh-sm">City : </p>
+                    <p class="card-text lh-sm">Field : </p>
+                    <p class="card-text lh-sm">Salary : </p>
+                    <p class="card-text lh-sm">Working hours : </p>
+                    <p class="card-text lh-sm">
+                        <small class="text-body-secondary">Posted 3 mins ago by</small>
+                        <a href="#" class="text-decoration-none">username</a>
+                    </p>
                     
-                    <div>Username</div>
-                    <div>Date</div>
                 </div>
             </div>
         </div>
@@ -34,10 +40,19 @@
     </div>
 </div>
 
-<style>
-    .post-card {
-        margin-bottom: 20px; /* Adjust the margin-bottom value as needed */
-    }
-</style>
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      <li class="page-item">
+        <a class="page-link" href="#">Previous</a>
+      </li>
+      <li class="page-item active"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#">Next</a>
+      </li>
+    </ul>
+  </nav>
 
 {% endblock main-content %}
