Edit footer, finish apply.html, edit home.html

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -173,6 +173,7 @@
           {% block main-content%}{% endblock main-content%}
 
           <!--Footer-->
+          <hr class="my-4">
           <div class="container">
             <footer class="py-5">
               <div class="row">
