--- a/app/templates/app/post/apply.html
+++ b/app/templates/app/post/apply.html
@@ -11,40 +11,33 @@
                 <h2>CV FORM</h2>
             </div>
             <div class = "row g-5">
+              <h4 class="mb-0">Basic</h4>
                 <form class="needs-validation" novalidate="">
                     <div class="row g-3">
-                      <div class="col-sm-6">
+                      <div class="col-sm-5">
                         <label for="firstName" class="form-label">First name :  </label>
                       </div>
           
-                      <div class="col-sm-6">
+                      <div class="col-sm-4">
                         <label for="lastName" class="form-label">Last name : </label>
                       </div>
                       
-                      <div class="col-sm-6">
+                      <div class="col-sm-3">
                         <label for="lastName" class="form-label">Gender : </label>
                       </div>
 
-                      <div class="col-sm-6">
-                        <label for="lastName" class="form-label">DOB : </label>
+                      <div class="col-sm-9">
+                        <label for="address" class="form-label">Address : </label>
                       </div>
 
-                      <div class="col-12">
-                        <label for="email" class="form-label">Email <span class="text-body-secondary">(Optional)</span></label>
-                        <input type="email" class="form-control" id="email" placeholder="you@example.com">
-                        <div class="invalid-feedback">
-                          Please enter a valid email address for further contact.
-                        </div>
-                      </div>
-          
-                      <div class="col-12">
-                        <label for="address" class="form-label">Address : </label>
+                      <div class="col-sm-3">
+                        <label for="lastName" class="form-label">DOB : </label>
                       </div>
                       
                       <div class=" col-sm-6 d-flex flex-row align-items-center">
                         <div class="form-outline flex-fill mb-0">
-                            <label for="">My experience</label>
-                            <textarea class="form-control" placeholder="Experience" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
+                            <label for="">Experience</label>
+                            <textarea class="form-control" placeholder="Briefly write about your experience" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
                         </div>
                       </div>
 
@@ -58,119 +51,55 @@
                       <div class=" col-sm-6 d-flex flex-row align-items-center">
                         <div class="form-outline flex-fill mb-0">
                             <label for="">Education</label>
-                            <textarea class="form-control" placeholder="Education" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
+                            <textarea class="form-control" placeholder="Briefly write about your education" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
                         </div>
                       </div>
 
                       <div class=" col-sm-6 d-flex flex-row align-items-center">
                         <div class="form-outline flex-fill mb-0">
                             <label for="">Interests</label>
-                            <textarea class="form-control" placeholder="Interests" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
+                            <textarea class="form-control" placeholder="Briefly write about your interests" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
                         </div>
                       </div>
 
+                      <div class=" col-sm-6 d-flex flex-row align-items-center">
+                        <div class="form-outline flex-fill mb-0">
+                            <label for="">Foreign Languages</label>
+                            <textarea class="form-control" placeholder="Briefly write about your foreign languages" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
+                        </div>
+                      </div>
 
+                      <div class=" col-sm-6 d-flex flex-row align-items-center">
+                        <div class="form-outline flex-fill mb-0">
+                            <label for="">Skills and Certification</label>
+                            <textarea class="form-control" placeholder="Briefly write about your skills and certifications" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
+                        </div>
+                      </div>                                                     
+                    </div>
+          
+                    <hr class="my-4">
+                    
+                    <h4 class="mb-3">Contact</h4>
+                    <div class="row g-3">
+                      <div class="col-sm-4">
+                        <label for="email" class="form-label">Email <span class="text-body-secondary">(Optional)</span></label>
+                        <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                        <div class="invalid-feedback">
+                          Please enter a valid email address for further contact.
+                        </div>
+                      </div>
 
-                      <div class="col-md-5">
-                        <label for="country" class="form-label">Country</label>
-                        <select class="form-select" id="country" required="">
-                          <option value="">Choose...</option>
-                          <option>United States</option>
-                        </select>
-                        <div class="invalid-feedback">
-                          Please select a valid country.
-                        </div>
-                      </div>
-          
-                      <div class="col-md-4">
-                        <label for="state" class="form-label">State</label>
-                        <select class="form-select" id="state" required="">
-                          <option value="">Choose...</option>
-                          <option>California</option>
-                        </select>
-                        <div class="invalid-feedback">
-                          Please provide a valid state.
-                        </div>
-                      </div>
-          
-                      <div class="col-md-3">
-                        <label for="zip" class="form-label">Zip</label>
-                        <input type="text" class="form-control" id="zip" placeholder="" required="">
-                        <div class="invalid-feedback">
-                          Zip code required.
-                        </div>
+                      <div class="col-sm-3">
+                        <label for="number" class="form-label">Phone number <span class="text-body-secondary">(Optional)</span></label>
+                        <input type="number" class="form-control" id="phone-number" placeholder="0123456789">
                       </div>
                     </div>
-          
+
                     <hr class="my-4">
-          
-                    <div class="form-check">
-                      <input type="checkbox" class="form-check-input" id="same-address">
-                      <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
+                    <div class="d-grid gap-2 d-md-flex col-6 mx-auto">
+                      <a type="button" class="btn btn-secondary btn-lg col-sm-6" href="{% url 'home' %}">Return to home</a>
+                      <a type="submit" class="btn btn-primary btn-lg col-sm-6" href="#">Send Application</a>
                     </div>
-          
-                    <div class="form-check">
-                      <input type="checkbox" class="form-check-input" id="save-info">
-                      <label class="form-check-label" for="save-info">Save this information for next time</label>
-                    </div>
-          
-                    <hr class="my-4">
-          
-                    <h4 class="mb-3">Payment</h4>
-          
-                    <div class="my-3">
-                      <div class="form-check">
-                        <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked="" required="">
-                        <label class="form-check-label" for="credit">Credit card</label>
-                      </div>
-                      <div class="form-check">
-                        <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required="">
-                        <label class="form-check-label" for="debit">Debit card</label>
-                      </div>
-                      <div class="form-check">
-                        <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required="">
-                        <label class="form-check-label" for="paypal">PayPal</label>
-                      </div>
-                    </div>
-          
-                    <div class="row gy-3">
-                      <div class="col-md-6">
-                        <label for="cc-name" class="form-label">Name on card</label>
-                        <input type="text" class="form-control" id="cc-name" placeholder="" required="">
-                        <small class="text-body-secondary">Full name as displayed on card</small>
-                        <div class="invalid-feedback">
-                          Name on card is required
-                        </div>
-                      </div>
-          
-                      <div class="col-md-6">
-                        <label for="cc-number" class="form-label">Credit card number</label>
-                        <input type="text" class="form-control" id="cc-number" placeholder="" required="">
-                        <div class="invalid-feedback">
-                          Credit card number is required
-                        </div>
-                      </div>
-          
-                      <div class="col-md-3">
-                        <label for="cc-expiration" class="form-label">Expiration</label>
-                        <input type="text" class="form-control" id="cc-expiration" placeholder="" required="">
-                        <div class="invalid-feedback">
-                          Expiration date required
-                        </div>
-                      </div>
-          
-                      <div class="col-md-3">
-                        <label for="cc-cvv" class="form-label">CVV</label>
-                        <input type="text" class="form-control" id="cc-cvv" placeholder="" required="">
-                        <div class="invalid-feedback">
-                          Security code required
-                        </div>
-                      </div>
-                    </div>
-          
-                    <hr class="my-4">
-          
-                    <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
                   </form>
             </div>
         </main>
