--- a/app/templates/app/post/apply.html
+++ b/app/templates/app/post/apply.html
@@ -2,8 +2,17 @@
 {% load static %}
 
 {% block main-content %}
-
-<body class = "bg-body-tertiary">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+  </head>
+  
+  <body class = "bg-body-tertiary">
     <div class = "container">
         <main>
             <div class="py-5 text-center">
@@ -104,5 +113,10 @@
             </div>
         </main>
     </div>
-</body>
+    
+    <script src="" async defer></script>
+  </body>
+</html>
+
+
 {% endblock main-content%}
