--- a/app/templates/app/post/publish.html
+++ b/app/templates/app/post/publish.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    <section class="vh-100" style="background-color: #eee;">
+    <section style="background-color: #eee;">
 
       <div class="container">
         <div class="row justify-content-center mt-5">
