--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     
-<section class="vh-10" style="background-color: #eee;">
+<section style="background-color: #eee;">
     <div class="container">
         <div class="row justify-content-center mt-5">
             <div class="col-md-10 col-sm-12 text-center">
