Update and add about.html

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -79,6 +79,14 @@
                       <li><a class="dropdown-item" href="#">Hai Phong</a></li>
                     </ul>
                   </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'about' %}">
+                      <i class="bi bi-file-person"></i>
+                      About
+                    </a>
+                  </li>
+
                 </ul>
 
                 <form class="d-flex" role="search">
