--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -33,7 +33,7 @@
                         </a>
                         <div class="card-body">
                             <a class = "text-decoration-none" href="{% url 'post' %}">
-                                <h5 class="card-title">Caption for your Picture</h5> 
+                                <h5 class="card-title">Post title</h5> 
                             </a>
                             <p class="card-text lh-sm">Company Name : </p>
                             <p class="card-text lh-sm">City : </p>
