Finish about.html, Update base.html

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -216,8 +216,7 @@
   
                 <li class="ms-3">
                   <a class="link-body-emphasis" href="https://github.com/Ji21127543/intro2se-21clc08-group06" target="_blank" rel="noopener noreferrer">
-                    <i class="bi bi-github">
-                    </i>
+                    <i class="bi bi-github"></i>
                   </a>
                 </li>
               </ul>
