--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -47,7 +47,12 @@
                                 <span class="badge text-bg-success">Tester</span>
                             </p>
                             <div class = "text-center">
-                                <a type="button" class="btn btn-secondary mt-4" href="mailto:lmmquan21@clc.fitus.edu.vn">Contact</a>
+                                <a type="button" class="btn btn-secondary mt-4" href="mailto:lmmquan21@clc.fitus.edu.vn">
+                                    <i class="bi bi-envelope"></i>
+                                </a>
+                                <a class="btn btn-primary mt-4" href="https://www.facebook.com/C9MinhQuanLe/" target="_blank" rel="noopener noreferrer" width="75" height="75">
+                                    <i class="bi bi-facebook"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -71,7 +76,12 @@
                                 <span class="badge text-bg-success">Tester</span>
                             </p>
                             <div class = "text-center">
-                                <a type="button" class="btn btn-secondary mt-4" href="mailto:nhtlan21@clc.fitus.edu.vn">Contact</a>
+                                <a type="button" class="btn btn-secondary mt-4" href="mailto:nhtlan21@clc.fitus.edu.vn">
+                                    <i class="bi bi-envelope"></i>
+                                </a>
+                                <a class="btn btn-primary mt-4" href="https://www.facebook.com/mory.john.5" target="_blank" rel="noopener noreferrer" width="75" height="75">
+                                    <i class="bi bi-facebook"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -95,7 +105,12 @@
                                 <span class="badge text-bg-success">Tester</span>
                             </p>
                             <div class = "text-center">
-                                <a type="button" class="btn btn-secondary mt-4" href="mailto:vqvinh21@clc.fitus.edu.vn">Contact</a>
+                                <a type="button" class="btn btn-secondary mt-4" href="mailto:vqvinh21@clc.fitus.edu.vn">
+                                    <i class="bi bi-envelope"></i>
+                                </a>
+                                <a class="btn btn-primary mt-4" href="https://www.facebook.com/profile.php?id=100076142137331" target="_blank" rel="noopener noreferrer" width="75" height="75">
+                                    <i class="bi bi-facebook"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -122,7 +137,12 @@
                                 <span class="badge text-bg-danger">Team Leader</span>
                             </p>
                             <div class = "text-center">
-                                <a type="button" class="btn btn-secondary mt-4" href="mailto:hnquang21@clc.fitus.edu.vn">Contact</a>
+                                <a type="button" class="btn btn-secondary mt-4" href="mailto:hnquang21@clc.fitus.edu.vn">
+                                    <i class="bi bi-envelope"></i>
+                                </a>
+                                <a class="btn btn-primary mt-4" href="https://www.facebook.com/jihqg" target="_blank" rel="noopener noreferrer" width="75" height="75">
+                                    <i class="bi bi-facebook"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -146,7 +166,12 @@
                                 <span class="badge text-bg-warning">Business Analyst</span>
                             </p>
                             <div class = "text-center">
-                                <a type="button" class="btn btn-secondary mt-4" href="mailto:vdanh21@clc.fitus.edu.vn">Contact</a>
+                                <a type="button" class="btn btn-secondary mt-4" href="mailto:vdanh21@clc.fitus.edu.vn">
+                                    <i class="bi bi-envelope"></i>
+                                </a>
+                                <a class="btn btn-primary mt-4" href="https://www.facebook.com/profile.php?id=100015166748680" target="_blank" rel="noopener noreferrer" width="75" height="75">
+                                    <i class="bi bi-facebook"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
